# orchids-challenge

backend/: .env  pyproject.toml
backend/app/: main.py
backend/app/services/: llm_cloner.py  scraper.py
frontend/src/app/: page.tsx
